# nwn-voicesets

./: .env  .gitignore  Cargo.toml
docs/: data_structures.md  need_to.md
migrations/2020-04-09-234530_01_initial_tables/: down.sql  up.sql
src/: export.rs  hasher.rs  lib.rs  schema.rs  soundset2da.rs
src/database/: mod.rs  sound.rs  soundset.rs  voiceset.rs  voiceset_soundset.rs
src/models/: mod.rs  sound.rs  soundset.rs  voiceset.rs  voiceset_soundset.rs
src/repo/: export.rs  key.rs  mod.rs  models.rs  operations.rs  operations_macro.rs  sound.rs  soundset.rs  voiceset.rs
tests/: create_and_export.rs  database_sound.rs  database_soundset.rs  database_voiceset.rs  database_voiceset_soundset.rs  repo_create_and_export.rs
tests/helpers/: create.rs  file.rs  mod.rs  repo.rs
