[package]
name = "nwn-voiceset"
version = "0.1.0"
authors = ["Darien"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nwn-files = { git = "https://github.com/dastardlychimp/nwn-files-rs.git", branch = "working" }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
acid-store = { version = "0.5.0", features = ["compression"] }
uuid = { version = "0.8" }
serde = { version = "1.0.110", features = ["derive"] }